# collections

./: CMakeLists.txt  LICENSE.txt  README.md  compile.sh  conanfile.py  linked_list.h  test.cpp
cmake/: Config.cmake.in
linked_lists/: build.sh  main.cpp
src/collections/: linked_list.h
test/: test_linked_list.cpp
